style: refine bright terminal colors for improved visibility
Updates bright blue, bright magenta, and white terminal colors across
all Kitty themes and base palette for better contrast and consistency.

--- a/extras/kitty/oasis_desert.conf
+++ b/extras/kitty/oasis_desert.conf
@@ -15,16 +15,17 @@ color3                   #F0E68C
 color11                  #FF9F41
 
 color4                   #87CEEB
-color12                  #48B4E0
+color12                  #6FB8FF
 
 color5                   #B499FF
-color13                  #9F7FFF
+color13                  #C0A0FF
 
 color6                   #1CA1FF
 color14                  #8FD1C7
 
-color7                   #F6F0E1
-color15                  #F2E9E4
+color7                   #E8E2D4
+color15                  #FFF9F2
+
 
 # Core
 foreground               #F6F0E1
