--- a/extras/kitty/oasis_twilight.conf
+++ b/extras/kitty/oasis_twilight.conf
@@ -5,7 +5,7 @@
 color0                   #000000
 color8                   #514742
 
-color1                   #CD5C5C
+color1                   #D06666
 color9                   #FFA0A0
 
 color2                   #35B56E
@@ -39,7 +39,7 @@ cursor                   #F0E68C
 cursor_text_color        #000000
 
 # Borders (panes)
-active_border_color      #CD5C5C
+active_border_color      #D06666
 inactive_border_color    #514742
 
 # Tabs
