style: adjust Sunset orange shade across all palettes
Update Sunset from #FF9F41 to #FFA247 for improved consistency
across terminal configurations and palette definitions.

--- a/extras/kitty/oasis_abyss.conf
+++ b/extras/kitty/oasis_abyss.conf
@@ -12,7 +12,7 @@ color2                   #35B56E
 color10                  #6BBF59
 
 color3                   #F0E68C
-color11                  #FF9F41
+color11                  #FFA247
 
 color4                   #87CEEB
 color12                  #6FB8FF
