--- a/extras/kitty/oasis_rose.conf
+++ b/extras/kitty/oasis_rose.conf
@@ -12,7 +12,7 @@ color2                   #35B56E
 color10                  #6BBF59
 
 color3                   #F0E68C
-color11                  #FF9F41
+color11                  #FFA247
 
 color4                   #87CEEB
 color12                  #6FB8FF
