--- a/extras/kitty/oasis_day.conf
+++ b/extras/kitty/oasis_day.conf
@@ -12,7 +12,7 @@ color2                   #2A712D
 color10                  #516B14
 
 color3                   #A34700
-color11                  #A07400
+color11                  #775700
 
 color4                   #1964A6
 color12                  #2C5AA0
@@ -35,7 +35,7 @@ selection_background     #D3BA68
 selection_foreground     #3F321F
 
 # Cursor
-cursor                   #A07400
+cursor                   #775700
 cursor_text_color        #E5D68B
 
 # Borders (panes)
@@ -44,6 +44,6 @@ inactive_border_color    #6F664D
 
 # Tabs
 active_tab_foreground    #E5D68B
-active_tab_background    #A07400
+active_tab_background    #775700
 inactive_tab_foreground  #9D9870
 inactive_tab_background  #3F321F
