--- a/extras/kitty/oasis_dust.conf
+++ b/extras/kitty/oasis_dust.conf
@@ -6,7 +6,7 @@ color0                   #3A3427
 color8                   #6F664D
 
 color1                   #B5563A
-color9                   #B85763
+color9                   #9D4750
 
 color2                   #2A712D
 color10                  #516B14
