feat: Add Kitty theme generator and update themes
This commit introduces a Lua script to generate Kitty terminal themes
from the Oasis color palettes.

The  script automates the creation and update of
 files, ensuring consistency and ease of maintenance
across all Kitty themes.

Changes include:
- New file:
- Updated color values in all  files
  based on the output of the new generator.

Refs #9

--- a/extras/kitty/oasis_dust.conf
+++ b/extras/kitty/oasis_dust.conf
@@ -3,47 +3,47 @@
 
 # Palette
 color0                   #3A3427
-color8                   #6F664D
+color8                   #454030
 
-color1                   #B5563A
-color9                   #9D4750
+color1                   #663021
+color9                   #692c34
 
-color2                   #2A712D
-color10                  #516B14
+color2                   #1b491d
+color10                  #35450d
 
-color3                   #A34700
-color11                  #775700
+color3                   #6b2e00
+color11                  #533c00
 
-color4                   #1964A6
-color12                  #2C5AA0
+color4                   #10426d
+color12                  #1f3f71
 
-color5                   #5A2FCC
-color13                  #7A3FE2
+color5                   #46259f
+color13                  #4d19a8
 
-color6                   #0A6F8D
-color14                  #1C7E7E
+color6                   #064658
+color14                  #084559
 
-color7                   #352A15
-color15                  #7E7769
+color7                   #453826
+color15                  #443f36
 
 # Core
-foreground               #352A15
+foreground               #332814
 background               #D4B165
 
 # Selection
 selection_background     #C39E4F
-selection_foreground     #352A15
+selection_foreground     #332814
 
 # Cursor
-cursor                   #775700
-cursor_text_color        #D4B165
+cursor                   #6b2e00
+cursor_text_color        #3A3427
 
 # Borders (panes)
-active_border_color      #B5563A
-inactive_border_color    #6F664D
+active_border_color      #663021
+inactive_border_color    #454030
 
 # Tabs
-active_tab_foreground    #D4B165
-active_tab_background    #775700
-inactive_tab_foreground  #8A7F5F
-inactive_tab_background  #352A15
+active_tab_foreground    #3A3427
+active_tab_background    #6b2e00
+inactive_tab_foreground  #45412E
+inactive_tab_background  #C9A55A
