--- a/extras/kitty/oasis_twilight.conf
+++ b/extras/kitty/oasis_twilight.conf
@@ -27,12 +27,12 @@ color7                   #E8E2D4
 color15                  #FFF9F2
 
 # Core
-foreground               #F6F0E1
+foreground               #E6E0F8
 background               #221B2F
 
 # Selection
 selection_background     #5A3824
-selection_foreground     #F6F0E1
+selection_foreground     #E6E0F8
 
 # Cursor
 cursor                   #F0E68C
@@ -45,5 +45,5 @@ inactive_border_color    #514742
 # Tabs
 active_tab_foreground    #000000
 active_tab_background    #F0E68C
-inactive_tab_foreground  #7C6A5B
-inactive_tab_background  #1A1A1A
+inactive_tab_foreground  #43385B
+inactive_tab_background  #2B243B
