--- a/extras/kitty/oasis_dawnlight.conf
+++ b/extras/kitty/oasis_dawnlight.conf
@@ -1,30 +1,30 @@
 # extras/kitty/oasis_dawnlight.conf
-## name: Oasis Daybreak
+## name: Oasis Dawnlight
 
 # Palette
 color0                   #3A3427
-color8                   #6F664D
+color8                   #454030
 
-color1                   #B5563A
-color9                   #B85763
+color1                   #663021
+color9                   #692c34
 
-color2                   #2A712D
-color10                  #516B14
+color2                   #1b491d
+color10                  #35450d
 
-color3                   #A34700
-color11                  #A07400
+color3                   #6b2e00
+color11                  #533c00
 
-color4                   #1964A6
-color12                  #2C5AA0
+color4                   #10426d
+color12                  #1f3f71
 
-color5                   #5A2FCC
-color13                  #7A3FE2
+color5                   #46259f
+color13                  #4d19a8
 
-color6                   #0A6F8D
-color14                  #1C7E7E
+color6                   #064658
+color14                  #084559
 
 color7                   #453826
-color15                  #7E7769
+color15                  #443f36
 
 # Core
 foreground               #453826
@@ -35,15 +35,15 @@ selection_background     #D1C085
 selection_foreground     #453826
 
 # Cursor
-cursor                   #A07400
-cursor_text_color        #ECDFA3
+cursor                   #6b2e00
+cursor_text_color        #3A3427
 
 # Borders (panes)
-active_border_color      #B5563A
-inactive_border_color    #6F664D
+active_border_color      #663021
+inactive_border_color    #454030
 
 # Tabs
-active_tab_foreground    #ECDFA3
-active_tab_background    #A07400
-inactive_tab_foreground  #A29F7F
-inactive_tab_background  #453826
+active_tab_foreground    #3A3427
+active_tab_background    #6b2e00
+inactive_tab_foreground  #656349
+inactive_tab_background  #DDD091
