--- a/extras/kitty/oasis_day.conf
+++ b/extras/kitty/oasis_day.conf
@@ -3,47 +3,47 @@
 
 # Palette
 color0                   #3A3427
-color8                   #6F664D
+color8                   #454030
 
-color1                   #B5563A
-color9                   #9D4750
+color1                   #663021
+color9                   #692c34
 
-color2                   #2A712D
-color10                  #516B14
+color2                   #1b491d
+color10                  #35450d
 
-color3                   #A34700
-color11                  #775700
+color3                   #6b2e00
+color11                  #533c00
 
-color4                   #1964A6
-color12                  #2C5AA0
+color4                   #10426d
+color12                  #1f3f71
 
-color5                   #5A2FCC
-color13                  #7A3FE2
+color5                   #46259f
+color13                  #4d19a8
 
-color6                   #0A6F8D
-color14                  #1C7E7E
+color6                   #064658
+color14                  #084559
 
-color7                   #3F321F
-color15                  #7E7769
+color7                   #453826
+color15                  #443f36
 
 # Core
-foreground               #3F321F
+foreground               #382D1C
 background               #E5D68B
 
 # Selection
 selection_background     #D3BA68
-selection_foreground     #3F321F
+selection_foreground     #382D1C
 
 # Cursor
-cursor                   #775700
-cursor_text_color        #E5D68B
+cursor                   #6b2e00
+cursor_text_color        #3A3427
 
 # Borders (panes)
-active_border_color      #B5563A
-inactive_border_color    #6F664D
+active_border_color      #663021
+inactive_border_color    #454030
 
 # Tabs
-active_tab_foreground    #E5D68B
-active_tab_background    #775700
-inactive_tab_foreground  #9D9870
-inactive_tab_background  #3F321F
+active_tab_foreground    #3A3427
+active_tab_background    #6b2e00
+inactive_tab_foreground  #605D42
+inactive_tab_background  #DFC47A
