--- a/extras/kitty/oasis_dune.conf
+++ b/extras/kitty/oasis_dune.conf
@@ -27,12 +27,12 @@ color7                   #E8E2D4
 color15                  #FFF9F2
 
 # Core
-foreground               #F6F0E1
+foreground               #ECE6DF
 background               #2E2620
 
 # Selection
 selection_background     #335668
-selection_foreground     #F6F0E1
+selection_foreground     #ECE6DF
 
 # Cursor
 cursor                   #F0E68C
@@ -45,5 +45,5 @@ inactive_border_color    #514742
 # Tabs
 active_tab_foreground    #000000
 active_tab_background    #F0E68C
-inactive_tab_foreground  #7C6A5B
-inactive_tab_background  #1A1A1A
+inactive_tab_foreground  #6B5A4A
+inactive_tab_background  #3C332C
